fixed label spacing

--- a/src/themes/global/sensible-defaults.scss
+++ b/src/themes/global/sensible-defaults.scss
@@ -83,7 +83,7 @@ width: auto;
 }
 
 .progress-label {
-margin: 0 0.4vw;
+margin: 0 0.5em;
 }
 
 .steem-icon {
